--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,14 @@
 steps:
-  # مرحله ۱: بیلد Docker Image
+  # مرحله ۱: ساخت Docker Image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/gcp-repo-01', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/gcp-repo-01', '.']
 
-  # مرحله ۲: پوش کردن Docker Image به Google Container Registry
+  # مرحله ۲: Push کردن به Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/gcp-repo-01']
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/gcp-repo-01']
 
 images:
-  - 'gcr.io/$PROJECT_ID/gcp-repo-01'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/gcp-repo-01'
+
+options:
+  logging: CLOUD_LOGGING_ONLY  # ارسال لاگ‌ها فقط به Cloud Logging
