--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,55 +1,17 @@
 steps:
-  # ۱. کلون کردن سورس‌کد از GitHub
-  - name: 'gcr.io/cloud-builders/git'
+  - name: gcr.io/cloud-builders/git
     args: ['clone', 'https://github.com/fariborzfallahzadeh/gcp-repo-01.git']
 
-  # ۲. ساخت Docker Image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/gcp-repo-01', '.']
+  - name: gcr.io/cloud-builders/docker
+    args: ['build', '-t', 'gcr.io/${PROJECT_ID}/${CINAME}:${VERSION}', '.']
 
-  # ۳. Push کردن ایمیج به Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/gcp-repo-01']
+  - name: gcr.io/cloud-builders/docker
+    args: ['push', 'gcr.io/${PROJECT_ID}/${CINAME}:${VERSION}']
 
-  # ۴. تنظیم احراز هویت برای GKE
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - container
-      - clusters
-      - get-credentials
-      - $_CLUSTER_NAME
-      - --zone=$_ZONE
-      - --project=$PROJECT_ID
-
-  # ۵. بروزرسانی Deployment در GKE
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: kubectl
-    args:
-      - apply
-      - -f
-      - k8s-deployment.yaml
-
-  # ۶. بروزرسانی Service برای LoadBalancer در GKE
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: kubectl
-    args:
-      - apply
-      - -f
-      - k8s-service.yaml
-
-  # ۷. بررسی سرویس و دریافت External IP
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: kubectl
-    args: ['get', 'svc', 'gcp-repo-01-service']
-
-images:
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repo/gcp-repo-01'
+substitutions:
+  PROJECT_ID: ascendant-woods-452816-t8
+  CINAME: dke-image
+  VERSION: v1.0
 
 options:
   logging: CLOUD_LOGGING_ONLY
-
-substitutions:
-  _CLUSTER_NAME: "cicd-cluster"
-  _ZONE: "us-central1-a"
-  _DEPLOYMENT_NAME: "gcp-repo-01"
