--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ steps:
       - 'CLOUDSDK_CONTAINER_CLUSTER=cicd-cluster'
 
 substitutions:
-  _PROJECT_ID: ascendant-woods-452816-t8
+  _PROJECT_ID: handy-limiter-466809-s2
   _CINAME: myimgweb-sha256-1
   _VERSION: v4.0
 
