--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,16 +8,16 @@ steps:
   - name: gcr.io/cloud-builders/docker
     args: ['push', 'gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}']
 
-  # تنظیم ایمیج جدید در Kubernetes Deployment
- # - name: gcr.io/cloud-builders/kubectl
- #   args:
-  #    - 'set'
-  #    - 'image'
-  #    - 'deployment/cicd-app-1'
- #     - 'myimgweb-sha256-1=gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}'
+   تنظیم ایمیج جدید در Kubernetes Deployment
+  - name: gcr.io/cloud-builders/kubectl
+    args:
+      - 'set'
+      - 'image'
+      - 'deployment/cicd-app-1'
+      - 'myimgweb-sha256-1=gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}'
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
-  #    - 'CLOUDSDK_CONTAINER_CLUSTER=cicd-cluster'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=cicd-cluster'
 
 substitutions:
   _PROJECT_ID: handy-limiter-466809-s2
