--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,27 +1,28 @@
 steps:
+  # 1. Clone repository
   - name: gcr.io/cloud-builders/git
-    args: ['clone', 'https://github.com/fariborzfallahzadeh/gcp-repo-01.git']
-
-  - name: gcr.io/cloud-builders/docker
-    args: ['build', '-t', 'gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}', '.']
-
-  - name: gcr.io/cloud-builders/docker
-    args: ['push', 'gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}']
-
-  - name: gcr.io/cloud-builders/kubectl
     args:
-      - 'set'
-      - 'image'
-      - 'deployment/cicd-app-1'
-      - 'myimgweb-sha256-1=gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}'
-    env:
-      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
-      - 'CLOUDSDK_CONTAINER_CLUSTER=cicd-cluster'
+      - clone
+      - https://github.com/fariborzfallahzadeh/gcp-repo-01.git
+
+  # 2. Build Docker image
+  - name: gcr.io/cloud-builders/docker
+    args:
+      - build
+      - '-t'
+      - gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}
+      - '.'
+
+  # 3. Push Docker image
+  - name: gcr.io/cloud-builders/docker
+    args:
+      - push
+      - gcr.io/${_PROJECT_ID}/${_CINAME}:${_VERSION}
 
 substitutions:
-  _PROJECT_ID: handy-limiter-466809-s2
-  _CINAME: myimgweb-sha256-1
-  _VERSION: v4.0
+  _PROJECT_ID: ascendant-woods-452816-t8
+  _CINAME: dke-image
+  _VERSION: v1.0
 
 options:
   logging: CLOUD_LOGGING_ONLY
