--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,14 +10,14 @@ steps:
     args:
       - build
       - '-t'
-      - us-central1-docker.pkg.dev/${_PROJECT_ID}/my-repo/${_CINAME}:${_VERSION}
+      - us-central1-docker.pkg.dev/982767310796-compute/my-repo/dke-image:v2.0
       - '.'
 
   # 3. Push Docker image to Artifact Registry
   - name: gcr.io/cloud-builders/docker
     args:
       - push
-      - us-central1-docker.pkg.dev/${_PROJECT_ID}/my-repo/${_CINAME}:${_VERSION}
+      - us-central1-docker.pkg.dev/982767310796-compute/my-repo/dke-image:v2.0
 
   # 4. Update image in Kubernetes Deployment
   - name: gcr.io/cloud-builders/kubectl
@@ -25,15 +25,10 @@ steps:
       - set
       - image
       - deployment/cicd-app-1
-      - dke-image=us-central1-docker.pkg.dev/${_PROJECT_ID}/my-repo/${_CINAME}:${_VERSION}
+      - dke-image=us-central1-docker.pkg.dev/982767310796-compute/my-repo/dke-image:v2.0
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
       - 'CLOUDSDK_CONTAINER_CLUSTER=cicd-cluster'
-
-substitutions:
-  _PROJECT_ID: 982767310796-compute
-  _CINAME: dke-image
-  _VERSION: v2.0
 
 options:
   logging: CLOUD_LOGGING_ONLY
